k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karapiro-cartel
  labels:
    name: karapiro-cartel
    environment: production
